--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-  <h1>main branch</h1>
+  <h1>newb branch</h1>
+  <h1>newb branch commit 2</h1>
+  <h1>master branch</h1>
+  <h1>master branch commit 2</h1>
 </body>
 
 </html>
